--- a/utils.ipynb
+++ b/utils.ipynb
@@ -2630,7 +2630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 726,
    "id": "1ddf6236",
    "metadata": {},
    "outputs": [],
@@ -2674,6 +2674,11 @@
     "        \n",
     "        #??\n",
     "        self.window_pos_embed_bkg_spatial_size = window_pos_embed_bkg_spatial_size\n",
+    "\n",
+    "        #??\n",
+    "        self.pos_embed = nn.Parameter(\n",
+    "            torch.zeros(1, embed_dim, *self.window_pos_embed_bkg_spatial_size)\n",
+    "        )\n",
     "        \n",
     "        #??\n",
     "        self.pos_embed_window = nn.Parameter(\n",
@@ -2724,34 +2729,133 @@
     "        \n",
     "\n",
     "\n",
-    "        def _get_pos_embed(self, hw):\n",
+    "    def _get_pos_embed(self, hw):\n",
     "            h, w = hw\n",
     "\n",
     "            #??\n",
     "            window_embed = self.pos_embed_window\n",
     "            \n",
-    "            \n",
     "            pos_embed = F.interpolate(self.pos_embed, size=(h, w), mode='bicubic')\n",
+    "            pos_embed =  pos_embed + window_embed.tile(\n",
+    "                [x // y for x, y in zip(pos_embed.shape, window_embed.shape)]\n",
+    "            )\n",
+    "            pos_embed = pos_embed.permute(0, 2, 3, 1)\n",
+    "            return pos_embed\n",
     "\n",
     "\n",
     "\n",
-    "        def forward(self, x):\n",
+    "    def forward(self, x):\n",
     "\n",
     "            # downsample\n",
     "            x = self.patch_embed(x)\n",
     "            \n",
-    "            x = x + self\n",
-    "    "
+    "            x = x + self._get_pos_embed(x.shape[1:3])\n",
+    "\n",
+    "            outputs = []\n",
+    "            for i, blk in enumerate(self.blocks):\n",
+    "                x = blk(x)\n",
+    "                if (i == self.stage_ends[-1] or (i in self.stage_ends and self.return_interm_layers)):\n",
+    "                    feats = x.permute(0, 3, 1, 2)\n",
+    "                    outputs.append(feats)\n",
+    "\n",
+    "            return outputs    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 727,
    "id": "9b641565",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 32, 32])\n",
+      "torch.Size([1, 8, 8, 96])\n",
+      "-----attn-------\n",
+      "torch.Size([1, 8, 8, 288])\n",
+      "torch.Size([1, 64, 3, 1, 96])\n",
+      "torch.Size([1, 64, 1, 96]) torch.Size([1, 64, 1, 96]) torch.Size([1, 64, 1, 96])\n",
+      "torch.Size([1, 1, 64, 96])\n",
+      "torch.Size([1, 1, 64, 96])\n",
+      "=-----attn-------\n",
+      "torch.Size([1, 8, 1, 96])\n",
+      "torch.Size([1, 8, 8, 96])\n",
+      "torch.Size([1, 8, 8, 96])\n",
+      "-----attn-------\n",
+      "torch.Size([1, 8, 8, 288])\n",
+      "torch.Size([1, 64, 3, 1, 96])\n",
+      "torch.Size([1, 64, 1, 96]) torch.Size([1, 64, 1, 96]) torch.Size([1, 64, 1, 96])\n",
+      "torch.Size([1, 1, 64, 96])\n",
+      "torch.Size([1, 1, 64, 96])\n",
+      "=-----attn-------\n",
+      "torch.Size([1, 8, 1, 96])\n",
+      "torch.Size([1, 8, 8, 96])\n",
+      "torch.Size([1, 8, 8, 96])\n",
+      "-----attn-------\n",
+      "torch.Size([1, 8, 8, 384])\n",
+      "torch.Size([1, 64, 3, 2, 64])\n",
+      "torch.Size([1, 16, 2, 64]) torch.Size([1, 64, 2, 64]) torch.Size([1, 64, 2, 64])\n",
+      "torch.Size([1, 2, 16, 64])\n",
+      "torch.Size([1, 2, 16, 64])\n",
+      "=-----attn-------\n",
+      "torch.Size([1, 4, 4, 128])\n",
+      "torch.Size([1, 4, 4, 128])\n",
+      "torch.Size([1, 4, 4, 128])\n",
+      "-----attn-------\n",
+      "torch.Size([1, 4, 4, 384])\n",
+      "torch.Size([1, 16, 3, 2, 64])\n",
+      "torch.Size([1, 16, 2, 64]) torch.Size([1, 16, 2, 64]) torch.Size([1, 16, 2, 64])\n",
+      "torch.Size([1, 2, 16, 64])\n",
+      "torch.Size([1, 2, 16, 64])\n",
+      "=-----attn-------\n",
+      "torch.Size([1, 4, 1, 128])\n",
+      "torch.Size([1, 4, 4, 128])\n",
+      "torch.Size([1, 4, 4, 128])\n",
+      "-----attn-------\n",
+      "torch.Size([1, 4, 4, 384])\n",
+      "torch.Size([1, 16, 3, 2, 64])\n",
+      "torch.Size([1, 16, 2, 64]) torch.Size([1, 16, 2, 64]) torch.Size([1, 16, 2, 64])\n",
+      "torch.Size([1, 2, 16, 64])\n",
+      "torch.Size([1, 2, 16, 64])\n",
+      "=-----attn-------\n",
+      "torch.Size([1, 4, 1, 128])\n",
+      "torch.Size([1, 4, 4, 128])\n",
+      "torch.Size([1, 4, 4, 128])\n",
+      "-----attn-------\n",
+      "torch.Size([1, 4, 4, 384])\n",
+      "torch.Size([1, 16, 3, 4, 32])\n",
+      "torch.Size([1, 4, 4, 32]) torch.Size([1, 16, 4, 32]) torch.Size([1, 16, 4, 32])\n",
+      "torch.Size([1, 4, 4, 32])\n",
+      "torch.Size([1, 4, 4, 32])\n",
+      "=-----attn-------\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "shape '[0, 2, 2, 2, 2, -1]' is invalid for input of size 512",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[727], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m inp \u001b[38;5;241m=\u001b[39m lres_img[\u001b[38;5;28;01mNone\u001b[39;00m]\u001b[38;5;241m.\u001b[39mfloat()\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(inp\u001b[38;5;241m.\u001b[39mshape)\n\u001b[0;32m----> 4\u001b[0m \u001b[43mhi\u001b[49m\u001b[43m(\u001b[49m\u001b[43minp\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/Applications/anaconda3/envs/m/lib/python3.9/site-packages/torch/nn/modules/module.py:1511\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1509\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1510\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/Applications/anaconda3/envs/m/lib/python3.9/site-packages/torch/nn/modules/module.py:1520\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1515\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1516\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1518\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1519\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1520\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1522\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1523\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[726], line 119\u001b[0m, in \u001b[0;36mHiera.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m    117\u001b[0m outputs \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    118\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, blk \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mblocks):\n\u001b[0;32m--> 119\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[43mblk\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (i \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstage_ends[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;129;01mor\u001b[39;00m (i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstage_ends \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreturn_interm_layers)):\n\u001b[1;32m    121\u001b[0m         feats \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m)\n",
+      "File \u001b[0;32m/Applications/anaconda3/envs/m/lib/python3.9/site-packages/torch/nn/modules/module.py:1511\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1509\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[1;32m   1510\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1511\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_call_impl\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m/Applications/anaconda3/envs/m/lib/python3.9/site-packages/torch/nn/modules/module.py:1520\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1515\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1516\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1517\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[1;32m   1518\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1519\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1520\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mforward_call\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1522\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m   1523\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "Cell \u001b[0;32mIn[572], line 70\u001b[0m, in \u001b[0;36mMultiScaleBlock.forward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     66\u001b[0m     pad_hw \u001b[38;5;241m=\u001b[39m (H \u001b[38;5;241m+\u001b[39m pad_h, W \u001b[38;5;241m+\u001b[39m pad_w)   \n\u001b[1;32m     69\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwindow_size \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 70\u001b[0m     x \u001b[38;5;241m=\u001b[39m \u001b[43mwindow_unpartition\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwindow_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpad_hw\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mH\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;28mprint\u001b[39m(x\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m     74\u001b[0m x \u001b[38;5;241m=\u001b[39m shortcut \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdrop_path(x)\n",
+      "Cell \u001b[0;32mIn[12], line 10\u001b[0m, in \u001b[0;36mwindow_unpartition\u001b[0;34m(windows, window_size, pad_hw, hw)\u001b[0m\n\u001b[1;32m      7\u001b[0m B \u001b[38;5;241m=\u001b[39m windows\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m (Hp \u001b[38;5;241m*\u001b[39m Wp \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m window_size \u001b[38;5;241m/\u001b[39m\u001b[38;5;241m/\u001b[39m window_size)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# move the windows from from the batch dim to individual batch\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[43mwindows\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mview\u001b[49m\u001b[43m(\u001b[49m\u001b[43mB\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mHp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mwindow_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mWp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mwindow_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwindow_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mwindow_size\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# swap the height and width \u001b[39;00m\n\u001b[1;32m     13\u001b[0m x \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mpermute(\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m3\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m4\u001b[39m, \u001b[38;5;241m5\u001b[39m)\u001b[38;5;241m.\u001b[39mcontiguous()\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: shape '[0, 2, 2, 2, 2, -1]' is invalid for input of size 512"
+     ]
+    }
+   ],
    "source": [
-    "# Hiera()"
+    "hi = Hiera()\n",
+    "inp = lres_img[None].float().permute(0, 3, 1, 2)\n",
+    "print(inp.shape)\n",
+    "hi(inp)"
    ]
   },
   {
